@@ -1,5 +1,6 @@
 package etl.pub;
 
+import com.moandjiezana.toml.Toml;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -9,8 +10,8 @@ import org.apache.spark.sql.Dataset;
 import org.apache.spark.sql.Row;
 import org.apache.spark.sql.SparkSession;
 
+import java.io.File;
 import java.io.IOException;
-import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.Duration;
@@ -19,6 +20,9 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.function.BiConsumer;
 
+import static etl.pub.Func.delDir;
+import static etl.pub.Func.getLineDelimiter;
+
 
 class ETL extends Time {
     private final Logger logger = LogManager.getLogger();
@@ -26,6 +30,7 @@ class ETL extends Time {
     private final String isOrNot = "isOrNot";
     private final String is = "is";
     private final String not = "not";
+
 
     ETL(SparkSession session, Integer timeType, String timeID, Integer backDate, Integer frequency) {
         super(timeType, timeID, backDate, frequency);
@@ -36,12 +41,12 @@ class ETL extends Time {
         String lineLower = line.toLowerCase();
         Map<String, String> map = new HashMap<String, String>();
         if (type == 1 || type == 4) {
-            if (lineLower.contains(" local directory ")) {
+            if (lineLower.contains(" local directory ")) { // 写入目录
                 map.put(this.isOrNot, this.is);
                 map.put("line", line.split("'")[1]);
                 return map;
             }
-        } else if (type == 2) {
+        } else if (type == 2) {// 导入其他RDBMS数据
             if (lineLower.substring(0, 7).equals("insert ")) {
                 map.put(this.isOrNot, this.is);
                 map.put("line", line);
@@ -51,7 +56,7 @@ class ETL extends Time {
                 map.put("line", line.substring(1).trim());
                 return map;
             }
-        } else if (type == 3) {
+        } else if (type == 3) { // 导出数据到其他RDBMS
             if (lineLower.startsWith("@")) {
                 map.put(this.isOrNot, this.is);
                 map.put("line", line.substring(1).trim());
@@ -67,13 +72,14 @@ class ETL extends Time {
         String f = this.not;
         String dir = "";
         String sql = "";
-        String[] s = fromSql.trim().split("\n");
+        String[] s = fromSql.trim().split(getLineDelimiter());
         StringBuilder lines = new StringBuilder();
         for (String line : s) {
             String l = line.trim().toLowerCase();
-            if (!l.substring(0, 2).equals("--") && !l.substring(0, 1).equals("//")) {
+            if (!l.substring(0, 2).equals("--") && !l.substring(0, 2).equals("//")) {
                 f = this.is;
-            } else if (f.equals(this.is)) {
+            }
+            if (f.equals(this.is)) {
                 Map<String, String> rs = decideByType(l, type);
                 String f2 = rs.get(this.isOrNot);
                 sql = rs.get("line");
@@ -82,7 +88,7 @@ class ETL extends Time {
                     continue;
                 }
             }
-            lines.append(line).append("\n");
+            lines.append(line).append(getLineDelimiter());
         }
         sql = lines.toString();
         Map<String, String> map = new HashMap<String, String>();
@@ -106,6 +112,10 @@ class ETL extends Time {
         }
         String[] s = sqlString.split(";");
         for (String sql : s) {
+            sql = sql.trim();
+            if (sql.length() < 7) {
+                return;
+            }
             sql = replaceSqlParameter(sql);
             Map<String, String> rs = parseSql(sql, type);
             String f = rs.get(this.isOrNot);
@@ -129,19 +139,32 @@ class ETL extends Time {
     void toLocalDir(Dataset df, String localDir) {
         FileSystem fileSystem = null;  //操作Hdfs核心类
         Configuration configuration = null;  //配置类
-        String HDFS_PATH = "hdfs://192.168.247.100:9000";
+        Toml toml = Func.getParameters();
+        String HDFS_PATH = toml.getTable("base").getString("hdfs_path");
         try {
             String hdfsDir = "/tmp/" + localDir.substring(localDir.indexOf("/"));
             df.coalesce(8).write().mode("overwrite").option("sep", Func.getDefaultColDelimiter()).csv(hdfsDir);
+//            localDir = localDir.substring(0, localDir.length() - 2);
             Files.createDirectories(Paths.get(localDir));
-            Files.deleteIfExists(Paths.get(localDir + "/*"));
+//            Files.deleteIfExists(Paths.get(localDir + "/*"));
+            delDir(new File(localDir));
             configuration = new Configuration();
-            fileSystem = FileSystem.get(new URI(HDFS_PATH), configuration);
-            fileSystem.copyFromLocalFile(new Path(hdfsDir), new Path(localDir));
-//            Process pro = Runtime.getRuntime().exec(String.format("hadoop fs -get %s/* %s/", hdfsDir, localDir));
-//            pro.waitFor();
+            configuration.set("fs.defaultFS", HDFS_PATH);
+            fileSystem = FileSystem.get(configuration);
+            fileSystem.copyToLocalFile(new Path(hdfsDir), new Path(localDir));
+//            String shStr = String.format("hadoop fs -get %s* %s", hdfsDir, localDir);
+//            Process p = Runtime.getRuntime().exec(new String[]{"/bin/sh","-c",shStr}); // TODO:切换至java方式
+//            InputStreamReader ir = new InputStreamReader(p.getInputStream());
+//            LineNumberReader input = new LineNumberReader(ir);
+//            String line;
+//            p.waitFor();
+//            List<String> strList = new ArrayList<String>();
+//            while ((line = input.readLine()) != null){
+//                strList.add(line);
+//            }
+//            System.out.println(strList.toString());
         } catch (Exception e) {
-            logger.error(e);
+            logger.fatal(e);
         } finally {
             assert configuration != null;
             configuration.clear();
@@ -158,7 +181,4 @@ class ETL extends Time {
         Dataset<Row> df = exeSql(sql);
         df.createOrReplaceTempView("v_" + table);
     }
-
-
 }
-
